# ftcli

./: .env  .gitignore  README.md  __init__.py  auth.py  cache.py  cli.py  client.py  db_utils.py  gemini_utils.py  notify.py  offres.html  profile_db.py  pyproject.toml  requirements.txt  settings.py  test_cli.py  testus.html
ftcli/: agent_api.py  auth.py  cache.py  cli.py  client.py  cly.py  database.py  exporter.py  gemini_utils.py  menu.py  settings.py  ui_components.py
ftcli.egg-info/: PKG-INFO
templates/: recherche_formation.sh  test_open_formation.sh
